<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/dark">


    <TextView
        android:id="@+id/textView"
        android:layout_width="402dp"
        android:layout_height="wrap_content"
        android:shadowColor="#A2D3F6"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#A2D3F6"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@color/light_blue"
        android:textColor="@color/dark"

        android:textOff="@string/toggle_off"
        android:textOn="@string/toggle_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Change temperature:"
        android:textColor="#A2D3F6"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="289dp"
        android:layout_height="39dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:gravity="center"

        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="@string/option1"
            android:textColor="#A2D3F6"
            android:theme="@style/RadioButtonStyle"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="@string/option2"
            android:textColor="#A2D3F6"
            android:theme="@style/RadioButtonStyle"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select weather:"
        android:theme="@style/RadioButtonStyle"
        android:textColor="#A2D3F6"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.56" />

    <LinearLayout

        android:backgroundTint="@color/classy_blue"
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/second_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="@+id/toggleButton"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <CheckBox
            android:id="@+id/checkBoxRainy"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:theme="@style/RadioButtonStyle"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@drawable/ic_rainy"
            android:text="@string/rainy"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/checkBoxSunny"
            android:layout_width="120dp"
            android:theme="@style/RadioButtonStyle"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/ic_sunny"
            android:text="@string/sunny"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/checkBoxCloudy"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/ic_cloudy"
            android:text="@string/cloudy"
            android:theme="@style/RadioButtonStyle"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="123dp"
        android:layout_height="20dp"
        android:layout_marginTop="36dp"
        android:text=" Choose Location:"
        android:textColor="@color/light_blue"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <Spinner
        android:id="@+id/spinner"
        android:outlineAmbientShadowColor="@color/light_blue"
        android:layout_width="200dp"
        android:background="@color/light_blue"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="337dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.189">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="Today's Forecast"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="271dp"
            android:layout_gravity="bottom|center_horizontal"
            android:scaleType="fitCenter"
            android:src="@drawable/cloudy_2" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>